SVN
---

WARNING: All deprecated function, methods and tasks has been removed (see r1631, r1638 and r1799).

If you try to use this release with 0.6.X projects, you must upgrade them with: symfony upgrade 1.0
When you upgrade symfony, re-run the upgrade script (you can safely run the upgrade several times).

* user filters can now be registered anywhere in the filter chain
* minor changes to be compatible with PHP 5.2
* new sfFillInForm class
* added persistent connection support
* added some sfMixer hooks in the core (for 404 and 500 error for example)
* added behaviors for Propel classes
* unified the way to configure symfony librairies (config/config.php)
* symfony is now ORM independant
* greater credential flexibility
* symfony is now compatible with magic_quotes_gpc set to on
* refactored sfFilter class (executeBeforeExecution, executeBeforeRendering)
* new coverage script for symfony core
* new encoding parameter in databases.yml
* new functional and unit tests for the core framework (more than 2000)
* new sfMixin class to allow adding methods to core classes without inheritance
* new sfBrowser, sfTestBrowser and sfDomCssSelector classes to ease functional tests writing
* new unit test library (lime)
* major partial and component refactoring (big speed improvement)
* output escaping is now a global setting
* new helpers: use_stylesheet() and use_javascript()
* new time information in the symfony log and debug toolbar
* major performance improvements
* new sfLoader class
* symfony command line now works out the box (for PEAR, SVN or .tgz)
* new plugin system
* propel-build-all now works as expected
* major cache refactoring (new settings: with_layout and contextual)
* autoloading is now more flexible
* AJAX actions have now layout to off by default
* new slot support
* added setLayout() method to sfComponent
* better exception handling in symfony command line (try -t)
* symfony command line now in color (only for *nix)